# alog

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: ConfigParams.cmake  FindBenchmark.cmake  SanitizersFlags.cmake
docker/: Dockerfile
docs/: AsyncLoggerFromScratch.md  GetTID.md  GetTimeStamp.md  RingBuffer.md
inc/alog/: Channel.hpp  Client.hpp  Defs.hpp  Logger.hpp  Processor.hpp  Utils.hpp
inc/alog/concurrency/: RingBuffer.hpp  SpinLock.hpp  Utils.hpp
inc/alog/memory/: FixSizePool.hpp
inc/alog/stream/: StreamBase.hpp  StreamIO.hpp
inc/alog/time/: Clock.hpp
inc/config/: ALogConfig.hpp.in
scripts/: build-report.sh
src/: Channel.cpp  Client.cpp  Clock.cpp  Processor.cpp  Spinlock.cpp  Utils.cpp
test/bench/: Clock.bt.cpp  FixSizePool.bt.cpp  GetTID.bt.cpp  Log.bt.cpp  RingBuffer.bt.cpp
test/func/: LoggerFatal.ft.cpp  LoggerLevels.ft.cpp  LoggerMT.ft.cpp  LoggerST.ft.cpp
test/integr/: CMakeLists.txt  build.sh  main.cpp
test/unit/: FixSizePool.ut.cpp  RingBuffer.ut.cpp
